# chessbot

./: .gitattributes  .gitignore  README  README.md  REDME.md  RELATIONS__REGISTRATIONS_VS_BI_DIRECTIONAL.py  SEARCHABLE_SERVICES__HASH_LOOKUPS_VS_DATA_SET_QUERIES.py  board_driver.py  chessbot_api_architecture_guide.md  config.py  data-dictionary.py  find_missiing_package_init.py  game_entry_point.py  main.py  pygame_info.py  pyproject.toml  relation-report-question  requirements.txt  run_game.py  scratch.txt  test.py
DOCS/: CHESS_BOT_MANUAL.md  README  RELATIONS__REGISTRATIONS_VS_BI_DIRECTIONAL.py  SEARCHABLE_SERVICES__HASH_LOOKUPS_VS_DATA_SET_QUERIES.py  chessbot_api_architecture_guide.md  find_missiing_package_init.py  relation-report-question  run_game.py
chess.egg-info/: PKG-INFO  SOURCES.txt
chessbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: logging_setup.py
docs/: .gitattributes-backup  .gitignore-backup  LICENSE.md  README.md  __init__.template  class_module.template  class_module.template.  exception_module.template
exception/: exception.py
game/: __init__.py
game/board/: BOARD.md  board_square.py  game_board.py
game/common/: quadilateral.py  side.py
game/exception/: exception.py
game/figure/: game_figure.py
game/occupy/: game_figure.py
game/piece/: game_figure.py
game/traverse/: moveable.py
geeks/: surface_example.py
git/: config  index  packed-refs
myenv/: pyvenv.cfg
old_podscape/podscape/: Entity_RESPONSIBILITIES.md  constants.py  entity_factory.py  exception.py  game_display.py  pygame_diagnostic_info.py  run_game.py
src/: __init__.py  board.py  cell.py  constants.py  entity_factory.py  factory.py  game_display.py  geometry.py  grid_entity.py  id_factory.py  move_strategy.py  op_resplver.py
src/algebra/: __init__.py
src/analysis/: __init__.py  analyst.py
src/analyst/: __init__.py  analyst.py  analyzer.py
src/analyzer/: __init__.py  analyzer.py
src/assembler/: __init__.py  assembler.py
src/assembly/: __init__.py  assembler.py
src/assurance/: __init__.py  deployment_mode.py  error_handler.py  exception.py  result.py  throw_helper.py  transaction_report.py  transaction_result.py  validation_result.py
src/blueprint/: __init__.py  blueprint.py  model.py
src/bootstrap/: __init__.py  bootstrapper.py  operation.py
src/bootstrapper/: __init__.py  bootstrapper.py
src/bounds/: __init__.py  bounds.py
src/broadcast/: __init__.py
src/builder/: __init__.py  builder.py
src/carrier/: __init__.py  carrier.py
src/catalog/: __init__.py
src/chess/: __init__.py  display.py  for_my_resume.md  game_builder.py  screen.py
src/chooser/: __init__.py  chooser.py
src/command/: __init__.py
src/common/: Id_generator.py  constants.py  coordinate.py  dimension.py  entityfactory.py  factory.py  game_color.py  game_constant.py  game_default.py  generator.py  grid_entity_generator.py  id_generator.py  occupant_generator.py  pygame_colors.py  quadilateral.py  quadrilateral.py  side.py
src/config/: __init__.py
src/consistency/: __init__.py  checker.py
src/container/: __init__.py  container.py
src/context/: __init__.py  context.py  model.py
src/controller/: __init__.py  controller.py
src/coord-context-search-service/: __init__.py  service.py
src/database/: __init__.py  database.py  model.py
src/deleter/: __init__.py  deleter.py
src/delta/: __init__.py  delta.py  (+2 more)
(+25578 files in other folders)
